force-app/main/default/objects/IT_Bugs_and_Enhancements__c/IT_Bugs_and_Enhancements__c.object-meta.xml
<CustomObject>
    <label>IT Bugs &amp; Enhancements</label>
    <nameField>
        <displayFormat>BE-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>IT Bugs and Enhancements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Bugs &amp; Enhancements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>