force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Assigned_To_Dev__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Bugs &amp; Enhancements</relationshipLabel>
    <relationshipName>IT_Bugs_Enhancements</relationshipName>
    <type>Lookup</type>
</CustomField>