force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>If( Text(Status__c)   = &apos;Closed &amp; Live in Prod&apos;,   Released_Date__c - DATEVALUE (CreatedDate),

TODAY() - DATEVALUE (CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>