force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Developer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Developer_Notes__c</fullName>
    <defaultValue>&quot;Complete below details before setting to Testing Status&quot;  &amp;  BR() &amp;
&quot;New Fields : Object Name&quot; &amp;  BR() &amp;
&quot;Component list (VF page, Apex, Trigger, component)&quot; &amp;  BR() &amp;
&quot;Additional Details for references :&quot;</defaultValue>
    <label>Developer Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>