force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Fix_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Fix_Resolution__c</fullName>
    <label>Fix/Resolution</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>