force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>