force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Planned_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release_Date__c</fullName>
    <inlineHelpText>Date planned to deploy/Live in PROD</inlineHelpText>
    <label>Planned Release Date</label>
    <type>Date</type>
</CustomField>