force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Related To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Bill Pays</fullName>
            </value>
            <value>
                <fullName>Brand Quote - Sell</fullName>
            </value>
            <value>
                <fullName>Chart of Accounts</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Inventory Locations</fullName>
            </value>
            <value>
                <fullName>Inventory Position</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Multiple Objects</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Others - Refer to Long Description</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Receipt Payments</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Registry</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Service Tickets</fullName>
            </value>
            <value>
                <fullName>Shipping Manifest</fullName>
            </value>
            <value>
                <fullName>Sites</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
                <isActive>false</isActive>
                <label>CTR</label>
            </value>
            <value>
                <fullName>ETR</fullName>
                <isActive>false</isActive>
                <label>ETR</label>
            </value>
            <value>
                <fullName>TSM</fullName>
                <isActive>false</isActive>
                <label>TSM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>