force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Released_Date__c</fullName>
    <inlineHelpText>Bugs/Enhancement completed date</inlineHelpText>
    <label>Released Date</label>
    <type>Date</type>
</CustomField>