force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Prioritizing</fullName>
            </value>
            <value>
                <fullName>De-prioritized</fullName>
            </value>
            <value>
                <fullName>Prioritized</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting for Input</fullName>
            </value>
            <value>
                <fullName>Ready to Test</fullName>
            </value>
            <value>
                <fullName>Ready to Test - Staging</fullName>
            </value>
            <value>
                <fullName>Tested Changes Required</fullName>
                <color>#FFCC33</color>
                <label>Tested Changes Required</label>
            </value>
            <value>
                <fullName>Tested Failed</fullName>
                <color>#FF0000</color>
                <label>Tested Failed</label>
            </value>
            <value>
                <fullName>Tested Failed - Staging</fullName>
            </value>
            <value>
                <fullName>Test Passed</fullName>
            </value>
            <value>
                <fullName>Approved to Deploy - Staging</fullName>
            </value>
            <value>
                <fullName>Approved to Deploy - PROD</fullName>
                <color>#57F17C</color>
                <label>Approved to Deploy - PROD</label>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Closed_Live_in_PROD</fullName>
                <color>#78C953</color>
                <label>Closed &amp; Live in PROD</label>
            </value>
            <value>
                <fullName>Moved to JIRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>