force-app/main/default/objects/IT_Bugs_and_Enhancements__c/fields/Testing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Testing_Notes__c</fullName>
    <label>Testing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>