force-app/main/default/objects/IT_Bugs_and_Enhancements__c/validationRules/Validate_Release_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Release_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Text(Status__c )  = &apos;Closed &amp; Live in PROD&apos;  &amp;&amp; 
 ISNULL(Released_Date__c )</errorConditionFormula>
    <errorDisplayField>Released_Date__c</errorDisplayField>
    <errorMessage>Please Enter Release Date</errorMessage>
</ValidationRule>