force-app/main/default/objects/IT_Bugs_and_Enhancements__c/listViews/Released.listView-meta.xml
<ListView>
    <fullName>Released</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Planned_Release_Date__c</columns>
    <columns>Assigned_To_Dev__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Related_To__c</columns>
    <columns>Released_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed_Live_in_PROD</value>
    </filters>
    <label>Released</label>
</ListView>