force-app/main/default/objects/IT_Bugs_and_Enhancements__c/listViews/X6_Ready_to_Test.listView-meta.xml
<ListView>
    <fullName>X6_Ready_to_Test</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Order__c</columns>
    <columns>Priority__c</columns>
    <columns>Planned_Release_Date__c</columns>
    <columns>Assigned_To_Dev__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Related_To__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready to Test,Ready to Test - Staging,Tested Changes Required,Tested Failed,Tested Failed - Staging,Test Passed</value>
    </filters>
    <filters>
        <field>Assigned_To_Dev__c</field>
        <operation>notEqual</operation>
        <value>Madhan Kumar</value>
    </filters>
    <label>6. Ready to Test</label>
</ListView>