force-app/main/default/objects/IT_Bugs_and_Enhancements__c/listViews/X7_Tested_Changes_Required.listView-meta.xml
<ListView>
    <fullName>X7_Tested_Changes_Required</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Planned_Release_Date__c</columns>
    <columns>Assigned_To_Dev__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Related_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>ngo</value>
    </filters>
    <label>7. Tested Changes Required</label>
</ListView>