force-app/main/default/objects/IT_Bugs_and_Enhancements__c/listViews/X8_Test_Failed.listView-meta.xml
<ListView>
    <fullName>X8_Test_Failed</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Planned_Release_Date__c</columns>
    <columns>Assigned_To_Dev__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Related_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Tested Changes Required,Tested Failed,Tested Failed - Staging</value>
    </filters>
    <label>8. Test Failed</label>
</ListView>