force-app/main/default/objects/IT_Bugs_and_Enhancements__c/listViews/X9_Approved_to_Deploy.listView-meta.xml
<ListView>
    <fullName>X9_Approved_to_Deploy</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Planned_Release_Date__c</columns>
    <columns>Assigned_To_Dev__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Related_To__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved to Deploy - PROD,Approved to Deploy - Staging,Deployed</value>
    </filters>
    <label>9. Approved to Deploy</label>
</ListView>